--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <meta charset="utf-8">
     <title>Calculator</title>
     <style type="text/css">
@@ -126,7 +126,7 @@
 
   .containerF {
      width: 400px;
-     height: 530px;
+     height: 580px;
      background-color: rgb(8, 114, 0);
      margin: auto;
      margin-top: 30px;
@@ -204,98 +204,107 @@
    }
 
     </style>
-</head>
+  </head>
 <body>
+
 <div class="theSwitch">
   <button id="switch">Flip</button>
 </div>
-  <div class="toggled container">
-            <div class="row" id="headrow">
-                <h1 class="text-primary" id="header">Calculator</h1>
-            </div>
-            <div class="row" id="inputRow">
-                <p id="calc"></p>
-            </div>
-            <div class="row" id="bigButtonRow">
-                    <button onclick="ClearAll()" class="btnBig" id="all-clear">Clear All</button>
-                    <button onclick="ClearLast()" class="btnBig" id="clear-entry">Clear Last</button>
-            </div>
-            <div class="row2" id="smallRow1">
-                <button onclick="takeInput('7')" class="btnSmall" id="seven">7</button>
-                <button onclick="takeInput('8')" class="btnSmall" id="eight">8</button>
-                <button onclick="takeInput('9')" class="btnSmall" id="nine">9</button>
-                <button onclick="takeInput(' / ')" class="btnSmall" id="divide">/</button>
-            </div>
-            <div class="row2" id="smallRow2">
-                <button onclick="takeInput('4')" class="btnSmall" id="four">4</button>
-                <button onclick="takeInput('5')" class="btnSmall" id="five">5</button>
-                <button onclick="takeInput('6')" class="btnSmall" id="six">6</button>
-                <button onclick="takeInput(' * ')" class="btnSmall" id="times">x</button>    
-            </div>
-            <div class="row2" id="smallRow3">
-                <button onclick="takeInput('1')" class="btnSmall" id="one">1</button>
-                <button onclick="takeInput('2')" class="btnSmall" id="two">2</button>
-                <button onclick="takeInput('3')" class="btnSmall" id="three">3</button>
-                <button onclick="takeInput(' - ')" class="btnSmall" id="minus">-</button>   
-            </div>
-            <div class="row2" id="smallRow4">
-                <button onclick="takeInput('0')" class="btnSmall" id="zero">0</button>
-                <button onclick="takeInput('.')" class= "btnSmall" id="period">.</button>
-                <button onclick="Evaluate()" class="btnSmall" id="equals">=</button>
-                <button onclick="takeInput(' + ')" class="btnSmall" id="plus">+</button>
-            </div>
+
+<!-- Calculator -->
+
+<div class="toggled container">
+    <div class="row" id="headrow">
+        <h1 class="text-primary" id="header">Calculator</h1>
     </div>
-
-    <div class="toggled containerF"  style="display: none">
-            <div class="rowF" id="headrowF">
-                <h1 class="text-primary" id="headerF">Frankulator</h1>
-            </div>
-            <div class="rowF" id="inputRowF">
-                <p id="calcF"></p>
-            </div>
-            <div class="rowF" id="bigButtonRowF">
-                    <button onclick="frankClearAll()" class="btnBigF" id="all-clearF">Clear All</button>
-                    <button onclick="frankClearLast()" class="btnBigF" id="clear-entryF">Clear Last</button>
-            </div>
-            <div class="row2F" id="smallRow1">
-                <button onclick="Frankulate('7')" class="btnSmallF">7</button>
-                <button onclick="Frankulate('8')" class="btnSmallF">8</button>
-                <button onclick="Frankulate('9')" class="btnSmallF">9</button>
-                <button onclick="squareRootLink()" class="btnSmallF">sqRt</button>
-            </div>
-            <div class="row2F" id="smallRow2">
-                <button onclick="Frankulate('4')" class="btnSmallF">4</button>
-                <button onclick="Frankulate('5')" class="btnSmallF">5</button>
-                <button onclick="Frankulate('6')" class="btnSmallF">6</button>
-                <button onclick="squareLink()" class="btnSmallF">x^2</button>    
-            </div>
-            <div class="row2F" id="smallRow3">
-                <button onclick="Frankulate('1')" class="btnSmallF">1</button>
-                <button onclick="Frankulate('2')" class="btnSmallF">2</button>
-                <button onclick="Frankulate('3')" class="btnSmallF">3</button>
-                <button onclick="factorialLink()" class="btnSmallF">n!</button>
-            </div>
-            <div class="row2F" id="smallRow4">
-                <button onclick="Frankulate('0')" class="btnSmallF">0</button>
-                <button onclick="Frankulate('.')" class="btnSmallF">.</button>
-                <button onclick="percentLink()" class="btnSmallF">%</button>
-                <button title="Outputs the sum of the digits of a number, eg: 456 becomes 4+5+6 = 15" onclick="digitSumLink()" class="btnSmallF">D_S</button> 
-            </div>
-            <div class="row2F" id="smallRow5">
-                <button title="Calculates whether the number is prime or not" onclick="primeLink()" class="btnSmallF">P?</button>
-                <button title="Calculates the largest prime number factor of the input number" onclick="largestPrimeFactorLink()" class="btnSmallF">L_P</button>
-                <button title="Calculates the sum of primes of all numbers below the input number." onclick="sumOfPrimesLink()" class="btnSmallF">S_P</button>
-                <button title="Determines whether the number is a triangular number" onclick="triangularNumberLink()" class="btnSmallF">T?</button>
-            </div>
-            <div class="row2F" id="smallRow6">
-                <button title="Calculates the number of divisors the input number has" onclick="divisorCountLink()" class="btnSmallF">DvC</button>
-                <button title="Calculates the sum of all fibonacci numbers under the input number." onclick="fibonacciSumLink()" class="btnSmallF">F_S</button>
-                <button title="Calculates how many steps it takes a number to reach 1 via the collatz conjecture" onclick="collatzCountLink()" class="btnSmallF">C_C</button>
-                <button onclick="squareDigitChain()" class="btnSmallF">SDC</button>
-            </div>
-
-
+    <div class="row" id="inputRow">
+        <p id="calc"></p>
     </div>
+    <div class="row" id="bigButtonRow">
+        <button onclick="ClearAll()" class="btnBig" id="all-clear">Clear All</button>
+        <button onclick="ClearLast()" class="btnBig" id="clear-entry">Clear Last</button>
+    </div>
+    <div class="row2" id="smallRow1">
+        <button onclick="takeInput('7')" class="btnSmall" id="seven">7</button>
+        <button onclick="takeInput('8')" class="btnSmall" id="eight">8</button>
+        <button onclick="takeInput('9')" class="btnSmall" id="nine">9</button>
+        <button onclick="takeInput(' / ')" class="btnSmall" id="divide">/</button>
+    </div>
+    <div class="row2" id="smallRow2">
+        <button onclick="takeInput('4')" class="btnSmall" id="four">4</button>
+        <button onclick="takeInput('5')" class="btnSmall" id="five">5</button>
+        <button onclick="takeInput('6')" class="btnSmall" id="six">6</button>
+        <button onclick="takeInput(' * ')" class="btnSmall" id="times">x</button>    
+    </div>
+    <div class="row2" id="smallRow3">
+        <button onclick="takeInput('1')" class="btnSmall" id="one">1</button>
+        <button onclick="takeInput('2')" class="btnSmall" id="two">2</button>
+        <button onclick="takeInput('3')" class="btnSmall" id="three">3</button>
+        <button onclick="takeInput(' - ')" class="btnSmall" id="minus">-</button>   
+    </div>
+    <div class="row2" id="smallRow4">
+        <button onclick="takeInput('0')" class="btnSmall" id="zero">0</button>
+        <button onclick="takeInput('.')" class= "btnSmall" id="period">.</button>
+        <button onclick="Evaluate()" class="btnSmall" id="equals">=</button>
+        <button onclick="takeInput(' + ')" class="btnSmall" id="plus">+</button>
+    </div>
+</div>
+
+<!-- Frankulator -->
+
+<div class="toggled containerF"  style="display: none">
+    <div class="rowF" id="headrowF">
+        <h1 class="text-primary" id="headerF">Frankulator</h1>
+    </div>
+    <div class="rowF" id="inputRowF">
+        <p id="calcF"></p>
+    </div>
+    <div class="rowF" id="bigButtonRowF">
+        <button onclick="frankClearAll()" class="btnBigF" id="all-clearF">Clear All</button>
+        <button onclick="frankClearLast()" class="btnBigF" id="clear-entryF">Clear Last</button>
+    </div>
+    <div class="row2F" id="smallRow1">
+        <button onclick="Frankulate('7')" class="btnSmallF">7</button>
+        <button onclick="Frankulate('8')" class="btnSmallF">8</button>
+        <button onclick="Frankulate('9')" class="btnSmallF">9</button>
+        <button onclick="squareRootLink()" class="btnSmallF">sqRt</button>
+    </div>
+    <div class="row2F" id="smallRow2">
+        <button onclick="Frankulate('4')" class="btnSmallF">4</button>
+        <button onclick="Frankulate('5')" class="btnSmallF">5</button>
+        <button onclick="Frankulate('6')" class="btnSmallF">6</button>
+        <button onclick="squareLink()" class="btnSmallF">x^2</button>    
+    </div>
+    <div class="row2F" id="smallRow3">
+        <button onclick="Frankulate('1')" class="btnSmallF">1</button>
+        <button onclick="Frankulate('2')" class="btnSmallF">2</button>
+        <button onclick="Frankulate('3')" class="btnSmallF">3</button>
+        <button onclick="factorialLink()" class="btnSmallF">n!</button>
+    </div>
+    <div class="row2F" id="smallRow4">
+        <button onclick="Frankulate('0')" class="btnSmallF">0</button>
+        <button onclick="Frankulate('.')" class="btnSmallF">.</button>
+        <button onclick="percentLink()" class="btnSmallF">%</button>
+        <button title="Outputs the sum of the digits of a number, eg: 456 becomes 4+5+6 = 15" onclick="digitSumLink()" class="btnSmallF">D_S</button> 
+    </div>
+    <div class="row2F" id="smallRow5">
+        <button title="Calculates whether the number is prime or not" onclick="primeLink()" class="btnSmallF">P?</button>
+        <button title="Calculates the largest prime number factor of the input number" onclick="largestPrimeFactorLink()" class="btnSmallF">L_P</button>
+        <button title="Calculates the sum of primes of all numbers below the input number." onclick="sumOfPrimesLink()" class="btnSmallF">S_P</button>
+        <button title="Determines whether the number is a triangular number" onclick="triangularNumberLink()" class="btnSmallF">T?</button>
+    </div>
+    <div class="row2F" id="smallRow6">
+        <button title="Calculates the number of divisors the input number has" onclick="divisorCountLink()" class="btnSmallF">DvC</button>
+        <button title="Calculates the sum of all fibonacci numbers under the input number." onclick="fibonacciSumLink()" class="btnSmallF">F_S</button>
+        <button title="Calculates how many steps it takes a number to reach 1 via the collatz conjecture" onclick="collatzCountLink()" class="btnSmallF">C_C</button>
+        <button title="Determines whether the number is a SemiPrime" onclick="semiPrimeLink()" class="btnSmallF">SeP</button>
+    </div>
+    <div class="row2F" id="SmallRow7">
+        <button title="Determines if the number is a Chen Prime" onclick="chenPrimeLink()" class="btnSmallF">C_P</button>
+        <button title="Determines if the number is a Good Prime" onclick="goodPrimeLink()" class="btnSmallF">G_P</button>
+    </div>
+</div>
+
     <script src="calculator.js"></script>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script>
