--- a/testing.html
+++ b/testing.html
@@ -12,8 +12,8 @@
   <script src="https://cdn.rawgit.com/mochajs/mocha/2.2.5/mocha.js"></script>
 
   <script>mocha.setup('bdd')</script>
-  <script src="/Users/alexandre/Documents/Calculator/githubVersion/calculator.js"></script>
-  <script src="/Users/alexandre/Documents/Calculator/githubVersion/testing_calc.js"></script>
+  <script src="https://sashakoro.github.io/calculator/calculator.js"></script>
+  <script src="https://sashakoro.github.io/calculator/testing_calc.js"></script>
 
 
   <script>
