--- a/index.html
+++ b/index.html
@@ -209,6 +209,9 @@
 
 <div class="theSwitch">
   <button id="switch">Flip</button>
+  <a href="https://sashakoro.github.io/testing">Unit tests</a>
+  <a href="https://sashakoro.github.io/">Back to site</a>
+  <a href="https://github.com/SashaKoro/calculator">Github</a>
 </div>
 
 <!-- Calculator -->
