--- a/testing.html
+++ b/testing.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <link rel='shortcut icon' type='image/x-icon' href='images/mocha.ico'/>
+  <link rel='shortcut icon' type='image/x-icon' href='/Users/alexandre/Documents/Calculator/githubVersion/images/mocha.ico'/>
   <title>Mocha Tests</title>
   <link href="https://cdn.rawgit.com/mochajs/mocha/2.2.5/mocha.css" rel="stylesheet" />
 </head>
