--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         outline-color: black;
         outline-style: solid;
         outline-width: 2px;
-    }    
+    }
     button:active {
       transform: translateY(3px);
     }
@@ -136,7 +136,7 @@
      box-shadow: 7px 9px 2px black;
      border: 7px solid rgb(8, 97, 0);
    }
-   .rowF{
+   .rowF {
     text-align: center;
    }
     #headrowF {
@@ -229,25 +229,25 @@
         <button onclick="ClearAll()" class="btnBig" id="all-clear">Clear All</button>
         <button onclick="ClearLast()" class="btnBig" id="clear-entry">Clear Last</button>
     </div>
-    <div class="row2" id="smallRow1">
+    <div class="row2">
         <button onclick="takeInput('7')" class="btnSmall" id="seven">7</button>
         <button onclick="takeInput('8')" class="btnSmall" id="eight">8</button>
         <button onclick="takeInput('9')" class="btnSmall" id="nine">9</button>
         <button onclick="takeInput(' / ')" class="btnSmall" id="divide">/</button>
     </div>
-    <div class="row2" id="smallRow2">
+    <div class="row2">
         <button onclick="takeInput('4')" class="btnSmall" id="four">4</button>
         <button onclick="takeInput('5')" class="btnSmall" id="five">5</button>
         <button onclick="takeInput('6')" class="btnSmall" id="six">6</button>
-        <button onclick="takeInput(' * ')" class="btnSmall" id="times">x</button>    
+        <button onclick="takeInput(' * ')" class="btnSmall" id="times">x</button>
     </div>
-    <div class="row2" id="smallRow3">
+    <div class="row2">
         <button onclick="takeInput('1')" class="btnSmall" id="one">1</button>
         <button onclick="takeInput('2')" class="btnSmall" id="two">2</button>
         <button onclick="takeInput('3')" class="btnSmall" id="three">3</button>
-        <button onclick="takeInput(' - ')" class="btnSmall" id="minus">-</button>   
+        <button onclick="takeInput(' - ')" class="btnSmall" id="minus">-</button>
     </div>
-    <div class="row2" id="smallRow4">
+    <div class="row2">
         <button onclick="takeInput('0')" class="btnSmall" id="zero">0</button>
         <button onclick="takeInput('.')" class= "btnSmall" id="period">.</button>
         <button onclick="Evaluate()" class="btnSmall" id="equals">=</button>
@@ -268,29 +268,29 @@
         <button onclick="frankClearAll()" class="btnBigF" id="all-clearF">Clear All</button>
         <button onclick="frankClearLast()" class="btnBigF" id="clear-entryF">Clear Last</button>
     </div>
-    <div class="row2F" id="smallRow1">
+    <div class="row2F">
         <button onclick="Frankulate('7')" class="btnSmallF">7</button>
         <button onclick="Frankulate('8')" class="btnSmallF">8</button>
         <button onclick="Frankulate('9')" class="btnSmallF">9</button>
         <button onclick="squareRootLink()" class="btnSmallF">sqRt</button>
     </div>
-    <div class="row2F" id="smallRow2">
+    <div class="row2F">
         <button onclick="Frankulate('4')" class="btnSmallF">4</button>
         <button onclick="Frankulate('5')" class="btnSmallF">5</button>
         <button onclick="Frankulate('6')" class="btnSmallF">6</button>
-        <button onclick="squareLink()" class="btnSmallF">x^2</button>    
+        <button onclick="squareLink()" class="btnSmallF">x^2</button>
     </div>
-    <div class="row2F" id="smallRow3">
+    <div class="row2F">
         <button onclick="Frankulate('1')" class="btnSmallF">1</button>
         <button onclick="Frankulate('2')" class="btnSmallF">2</button>
         <button onclick="Frankulate('3')" class="btnSmallF">3</button>
         <button onclick="factorialLink()" class="btnSmallF">n!</button>
     </div>
-    <div class="row2F" id="smallRow4">
+    <div class="row2F">
         <button onclick="Frankulate('0')" class="btnSmallF">0</button>
         <button onclick="Frankulate('.')" class="btnSmallF">.</button>
         <button onclick="percentLink()" class="btnSmallF">%</button>
-        <button title="Outputs the sum of the digits of a number, eg: 456 becomes 4+5+6 = 15" onclick="digitSumLink()" class="btnSmallF">D_S</button> 
+        <button title="Outputs the sum of the digits of a number, eg: 456 becomes 4+5+6 = 15" onclick="digitSumLink()" class="btnSmallF">D_S</button>
     </div>
     <div class="row2F" id="smallRow5">
         <button title="Calculates whether the number is prime or not" onclick="primeLink()" class="btnSmallF">P?</button>
@@ -319,5 +319,5 @@
     });
     </script>
 
-</body> 
+</body>
 </html>
